--- a/KE03_INTDEV_SE_1_Base/Pages/Index.cshtml
+++ b/KE03_INTDEV_SE_1_Base/Pages/Index.cshtml
@@ -3,26 +3,59 @@
 @{
     ViewData["Title"] = "Home page";
 }
-<div class="alert-info">
-    <p class="p-1">
-        Dit project kun je gebruiken als startpunt voor de individuele inleveropdracht: <a href="https://moodle.zuyd.nl/mod/resource/view.php?id=1262065">KE03_INTDEV_SE_1</a>
+<!DOCTYPE html>
+<html lang="nl">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Matrix.inc</title>
+    <link rel="stylesheet" href="site.css" />
+</head>
+<body>
+    <div class="container">
+        <h1>Matrix.inc</h1>
 
-        <ul>
-            <li>Wat ga je maken: Een gebruiksvriendelijk online bestelsysteem voor een klant om producten te bestellen.</li>
-            <li>
-                Hoe ga je dit maken?<br />
-                - Individuele inleveropdracht.<br/>
-                - Pas de principes van HCI toe (bijv. Paper prototyping, design principles etc…)<br />
-                - Maak gebruik van: .NET core razor pages met bijbehorende zaken zoals, html, css, js, bootstrap, jquery<br />
-                - Maak gebruik van git en github voor source control van jouw code<br />
-            </li>
-            <li>
-                Je krijgt een dal (data access layer) meegeleverd. Qua inhoud is die niet perfect gevuld, maar qua structuur biedt die voldoende om een mooi bestel systeem te kunnen maken. <br /> 
-                Maar mis je iets, je bent vrij om alles naar wens aan te passen! Ben creatief!
-            </li>
-        </ul>
-    </p>
-</div>
+        <div class="buttons">
+            <a href="index.cshtml" class="producten">producten</a>
+            <div class="gegevens">
+                <a asp-page="/Index2" class="inloggen">inloggen</a>
+                <a asp-page="/Index3" class="registreren">registreren</a>
+                <a asp-page="/Index1" class="winkelmandje">🛒 Winkelmandje</a>
+
+
+            </div>
+        </div>
+        <hr />
+
+        <div class="product-grid">
+            @foreach (var product in Model.Products)
+            {
+                <div class="product-card">
+                    <img src="@product.Id" alt="@product.Name" />
+                    <h1>@product.Name</h1>
+                    <p>Prijs = @product.Price.ToString("0.00")</p>
+                    <div class="beschrijving">
+                        <p>Beschrijving: @product.Description</p>
+                    </div>
+
+                    
+                </div>
+            }
+
+                </div>
+            }
+        </div>
+
+        <footer class="onderaan">
+            <div class="footer">
+                <h2>Over ons</h2>
+            </div>
+        </footer>
+    </div>
+<script src="site.js"></script>
+</body>
+</html>
+
 
 <table class="table">
     <thead>
