--- a/KE03_INTDEV_SE_1_Base/wwwroot/css/site.css
+++ b/KE03_INTDEV_SE_1_Base/wwwroot/css/site.css
@@ -17,6 +17,68 @@ html {
   min-height: 100%;
 }
 
-body {
+
+.body {
   margin-bottom: 60px;
+}
+.container {
+    text-align: center;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    background-color: cornflowerblue;
+}
+.inloggen, .producten, .gegevens, .registreren, .winkelmandje {
+    display: inline-block;
+    padding: 10px 16px;
+    margin: 5px;
+    background-color: white;
+    color: black;
+    text-decoration: none;
+    border: 2px solid black;
+    border-radius: 8px;
+    font-weight: bold;
+    transition: background-color 0.3s ease;
+}
+.buttons {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+    
+
+
+
+
+}
+.winkel {
+    padding: 9px 15px;
+    font-size: medium;
+}
+.beschrijving {
+    padding: 10px;
+    font-size: medium;
+}
+
+.product-grid {
+    display: grid;
+    gap: 20px;
+    grid-template-columns: repeat(2, 1fr);
+    margin-top: 20px;
+}
+
+.product-card {
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    max-width: 300px;
+    text-align: center;
+}
+
+.onderaan {
+    background-color: #222;
+    color: #fff;
+    text-align: center;
+    padding: 30px 20px;
+    margin-top: 50px;
 }
